# ML

./: .gitignore  README.md  docker-compose.yml  dockerfile  requirement.txt
DataSet/: dataproducer.py  hd.txt  heart_disease.csv  heart_disease_preprocessed.csv  heartd.txt  newhd.txt  operator.ipynb
LinearRegression/: .gitignore  CMakeLists.txt  LinearRtrain.data  config.txt  local.sh
LinearRegression/model/: Model.cpp
LinearRegression/system/: LinearRegerssion.cpp  LinearRegression.h  main.cpp
LinearRegression/util/: Sample.h
LogisticRegression/: .gitignore  CMakeLists.txt  Model.txt  README.md  config.txt  local.sh  newconfig.txt  newtest.data  newtrain.data  run_ps_dist_server.sh
LogisticRegression/model/: Model.cpp  Model.h
LogisticRegression/ps-lite/make/: deps.mk
LogisticRegression/ps-lite/src/: meta.pb.cc
LogisticRegression/scripts/: start_worker.sh
LogisticRegression/system/: LogisticRegression.cpp  LogisticRegression.h  main.cpp
LogisticRegression/util/: Configure.cpp  Configure.h  Sample.cpp  Sample.h  datatype.h  io.cpp  io.h  log.cpp  log.h  reader.cpp  reader.h
LogisticRegression_v2/: CMakeLists.txt
LogisticRegression_v2/ScriptsAndDate/: config.txt
LogisticRegression_v2/model/: model.h
LogisticRegression_v2/objective/: L1regular.h  L2regular.h  objective.h  regular.h
LogisticRegression_v2/scripts/: LR.model  configure.config  local.sh  run_ps_dist_scheduler.sh  run_ps_dist_worker.sh  scheduler.sh  start_scheduler.sh  start_server.sh  test.sh
LogisticRegression_v2/system/: logreg.h  main.cpp  server.h
LogisticRegression_v2/util/: CMakeLists.txt  a.out  configure.cpp  configure.h  datatype.h  io.cpp  io.h  log.h  sample.h  samplereader.h  test.cpp
RandomForests/: MnistPreProcess.cpp  MnistPreProcess.h  Node.cpp  Node.h  RandomForest.cpp  Tree.cpp  Tree.h  main.cpp
